# Krill

./: .gitmodules  CHANGELOG.md  Krill.cabal  KrillLib.sln  LICENSE  README.md  cabal.project  default.nix  flake.nix
.github/workflows/: dotnet-desktop.yml
AppleI/: AppleI.cabal  CHANGELOG.md  README.md  notes.txt  notes2.txt
AppleI/Basic/: wozmon.cfg  wozmon.s
AppleI/app/: Frontend.hs  Main.hs
AppleI/app/AppleI/: Bus.hs  Carousel.hs  Keyboard.hs  Main.hs  Memory.hs  Terminal.hs
AppleI/app/AppleI/Terminal/: Carousel.hs  ThisSucks.hs
AppleI/app/Frontend/: Internal.hs  Main.hs
AppleII/: AppleII.cabal  CHANGELOG.md  LICENSE  Notes.md
AppleII/ASM/: monitor.asm
AppleII/Tools/: create_font_rom.py  create_palette.py  view_font_rom.py
AppleII/app/: Frontend.hs  Main.hs
AppleII/app/AppleII/: Bus.hs  Cassette.hs  Display.hs  Keyboard.hs  Memory.hs
AppleII/app/AppleII/Display/: Blocks.hs  Char.hs
AppleII/app/Frontend/: KeyASCII.hs
Demo/: Demo.csproj  Demo.sln  Game1.cs  Program.cs
Demo/Content/: Content.mgcb  demo.lua  dialogue_example.ldg
Demo/Scenes/: AnimationDemo.cs  DialogueDemo.cs
Disassembler/: Disassembler.cabal  README.md  cassette-interface.asm
Disassembler/app/: Main.hs
K6502/: CHANGELOG.md  K6502.cabal  README.md
K6502/src/: K6502.hs  Utils.hs
K6502/src/K6502/: API.hs  Disassembler.hs  Execution.hs  Instructions.hs  Internal.hs  Types.hs
K6502/test/: Loader.hs  Main.hs  Tester.hs
KBasic/: KBasic.cabal
Krill/: Game1.cs  Krill.csproj  Krill.sln  Program.cs  app.manifest
Krill.Tests/: Krill.Tests.csproj  UnitTest1.cs
Krill.Tests/Components/: CronTab.cs  MessageBroker.cs  StateMachine.cs
Krill/Components/: CronTab.cs  MessageBroker.cs  StateMachine.cs
KrillLib/: Game1.cs  KrillLib.csproj
KrillLib/Assets/: Loader.cs  LuaScript.cs  init_dialogue.lua
KrillLib/Components/: MessageBroker.cs  ScriptableComponent.cs  StateMachine.cs
KrillLib/Components/Animation/: AnimationClip.cs  AnimationTarget.cs  Builder.cs  ClipBundle.cs  ClipPlayer.cs  EventClip.cs  IClip.cs  Lerps.cs
KrillLib/Components/Dialogue/: DialogueManager.cs  LDG.cs
KrillLib/Content/: Content.mgcb
KrillLib/ECS/: FlowController.cs  ScriptableEntity.cs
KrillLib/Pipeline/: Lua.cs
Pipeline/: Lua.cs  Pipeline.csproj
Tests/: Krill.Tests.csproj
Tests/Assets/: unit1.ldg  unit2.ldg  unit3.ldg  unit4.ldg  unit5.ldg  unit6.ldg  unit7.ldg  unit8.ldg
Tests/Components/: CronTab.cs  LDG.cs  StateMachine.cs
Tests/ECS/: FlowController.cs
src/: K6502.hs  Utils.hs
src/K6502/: API.hs  Execution.hs  Instructions.hs  Internal.hs  Types.hs
