cabal-version:      3.0
name:               Krill
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable Krill
    import:         warnings
    main-is:        Main.hs


    other-modules:  K6502               ,
                    K6502.Types         ,
                    K6502.Internal      ,
                    K6502.Instructions  ,
                    K6502.Execution     ,
                    K6502.API           
    -- other-modules:
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1
                    ,   mtl >= 2.2.2
                    ,   containers >= 0.6.7
    hs-source-dirs:   src
    default-language: Haskell2010
