cabal-version:          3.0
name:                   AppleI
version:                0.1.0.0
-- synopsis:
-- description:
license:                MIT
license-file:           LICENSE
author:                 lesserfish
maintainer:             lesserfish@pm.me
-- copyright:
category:               Game
build-type:             Simple
extra-doc-files:        CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:        -Wall

executable AppleI
    import:             warnings
    main-is:            Main.hs

    other-modules:      AppleI.Bus
                    ,   AppleI.Keyboard
                    ,   AppleI.Terminal
                    ,   AppleI.Terminal.Carousel
                    ,   AppleI.Memory
                    ,   AppleI.Main
                    ,   Frontend.Internal
                    ,   Frontend.Main
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1
                    ,   K6502
                    ,   vector >= 0.13.1.0
                    ,   mtl >= 2.2.2
                    ,   sdl2 >= 2.5.5.0
                    ,   text >= 2.0.2

    hs-source-dirs:     app

    default-language:   Haskell2010
