cabal-version:          3.0
name:                   appleI
version:                0.1.0.0
-- synopsis:
-- description:
license:                MIT
license-file:           LICENSE
author:                 lesserfish
maintainer:             lesserfish@pm.me
-- copyright:
category:               Game
build-type:             Simple
extra-doc-files:        CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:        -Wall

executable AppleI
    import:             warnings
    main-is:            Main.hs

    other-modules:      AppleII.Bus
                    ,   AppleII.Keyboard
                    ,   AppleII.Memory
                    ,   Frontend
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1
                    ,   K6502
                    ,   vector >= 0.13.1.0
                    ,   mtl >= 2.2.2
                    ,   sdl2 >= 2.5.5.0
                    ,   text >= 2.0.2
                    ,   bytestring >= 0.11.5.3
                    ,   optparse-applicative >= 0.18.0.0
                    ,   directory >= 1.3.7.1

    data-files:         Assets/font.bmp
                    ,   Assets/wozmon.bin

    hs-source-dirs:     app

    default-language:   Haskell2010
