cabal-version:      3.0
name:               AppleII
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

data-files:         Assets/font.bin

common warnings
    ghc-options: -Wall

executable AppleII
    import:           warnings
    main-is:          Main.hs
    other-modules:    AppleII.Bus
                  ,   AppleII.Display
                  ,   AppleII.Display.Char
                  ,   AppleII.Display.Blocks
                  ,   AppleII.Keyboard
                  ,   AppleII.Memory
                  ,   Frontend
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                  ,   mtl >= 2.3.1
                  ,   vector >= 0.13.1.0
                  ,   bytestring >= 0.11.5.3
                  ,   optparse-applicative >= 0.18.1.0
                  ,   sdl2 >= 2.5.5.0
                  ,   random >= 1.2.1.2
                  ,   K6502
    hs-source-dirs:   app
    data-files:         Assets/font.bin
    default-language: Haskell2010
