cabal-version:          3.0
name:                   Disassembler
version:                0.1.0.0
-- synopsis:
-- description:
license:                MIT
license-file:           LICENSE
author:                 lesserfish
maintainer:             lesserfish@pm.me
-- copyright:
category:               Game
build-type:             Simple
extra-doc-files:        CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options:        -Wall

executable Disassembler
    import:             warnings
    main-is:            Main.hs

    -- other-extensions:
    build-depends:      base >=4.17.2.1
                    ,   K6502
                    ,   optparse-applicative >= 0.18.0.0
                    ,   bytestring >= 0.11.5.3

    hs-source-dirs:     app

    default-language:   Haskell2010
