cabal-version:      3.0
name:               K6502
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             lesserfish
maintainer:         lesserfish@pm.me
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:             warnings
    exposed-modules:    K6502
    other-modules:      Utils
                    ,   K6502.API
                    ,   K6502.Execution
                    ,   K6502.Instructions
                    ,   K6502.Internal
                    ,   K6502.Types
    -- other-extensions:
    build-depends:      base ^>=4.17.2.1
                    ,   mtl >= 2.2.2
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite K6502-test
    import:           warnings
    default-language: Haskell2010
    other-modules:      Loader
                ,       Tester
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
                    base ^>=4.17.2.1
                ,   K6502
                ,   aeson >= 2.2.3.0
                ,   bytestring >= 0.11.5.3
                ,   containers >= 0.6.7
                ,   hspec >= 2.11.9
